// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Stepper renders all step states 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: transparent;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 2px;
  flex: 1 1;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 32px;
  width: 32px;
  justify-content: center;
  border-radius: 100%;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(0, 0, 0, 0.33);
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 2px;
  flex: 1 1;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-top: 6px;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #009E67;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 32px;
  width: 32px;
  justify-content: center;
  border-radius: 100%;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #009E67;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 2px;
  flex: 1 1;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #B30000;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 32px;
  width: 32px;
  justify-content: center;
  border-radius: 100%;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #B30000;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 2px;
  flex: 1 1;
}

.c19 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #33333310;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 32px;
  width: 32px;
  justify-content: center;
  border-radius: 100%;
}

.c21 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c12 {
  display: inline-block;
  flex: 0 0 auto;
  width: 12px;
  height: 12px;
  fill: #FFFFFF;
  stroke: #FFFFFF;
}

.c12 g {
  fill: inherit;
  stroke: inherit;
}

.c12 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c12 *[stroke*='#'],
.c12 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c12 *[fill-rule],
.c12 *[FILL-RULE],
.c12 *[fill*='#'],
.c12 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c7 {
  font-size: 14px;
  line-height: 20px;
  color: #FFFFFF;
  font-weight: bold;
}

.c10 {
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  color: #7D4CDB;
  font-weight: bold;
}

.c14 {
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #555555;
  font-weight: normal;
}

.c17 {
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #B30000;
  font-weight: normal;
}

.c18 {
  margin-top: 3px;
  font-size: 12px;
  line-height: 18px;
  text-align: center;
  color: #B30000;
}

.c20 {
  font-size: 14px;
  line-height: 20px;
  color: #555555;
  font-weight: bold;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c9 {
    padding-top: 3px;
  }
}

<div
    class="c0"
  >
    <ol
      aria-label="Progress steps"
      class="c1"
      style="list-style: none; margin: 0px; padding: 0px;"
    >
      <li
        aria-current="step"
        class="c2"
        style="list-style: none;"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              aria-hidden="true"
              class="c5"
            />
            <button
              aria-current="step"
              aria-label="Step 1 of 4: Pending"
              style="background: none; padding: 0px; margin: 0px; cursor: pointer; display: flex; align-items: center; justify-content: center; min-width: 44px; min-height: 44px; border-radius: 50%;"
              tabindex="0"
              type="button"
            >
              <div
                aria-hidden="true"
                class="c6"
                style="border: 2px solid #7d4cdb; box-sizing: border-box; flex-shrink: 0;"
              >
                <span
                  class="c7"
                >
                  1
                </span>
              </div>
            </button>
            <div
              aria-hidden="true"
              class="c8"
            />
          </div>
          <div
            class="c9"
          >
            <span
              class="c10"
            >
              Pending
            </span>
          </div>
        </div>
      </li>
      <li
        class="c2"
        style="list-style: none;"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              aria-hidden="true"
              class="c8"
            />
            <button
              aria-label="Step 2 of 4: Completed"
              style="background: none; padding: 0px; margin: 0px; cursor: pointer; display: flex; align-items: center; justify-content: center; min-width: 44px; min-height: 44px; border-radius: 50%;"
              tabindex="-1"
              type="button"
            >
              <div
                aria-hidden="true"
                class="c11"
                style="border: 2px solid #009e67; box-sizing: border-box; flex-shrink: 0;"
              >
                <svg
                  aria-label="Checkmark"
                  class="c12"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m2 14 7 6L22 4"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
            <div
              aria-hidden="true"
              class="c13"
            />
          </div>
          <div
            class="c9"
          >
            <span
              class="c14"
            >
              Completed
            </span>
          </div>
        </div>
      </li>
      <li
        class="c2"
        style="list-style: none;"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              aria-hidden="true"
              class="c13"
            />
            <button
              aria-describedby="stepper-error-s3"
              aria-label="Step 3 of 4: Error"
              style="background: none; padding: 0px; margin: 0px; cursor: pointer; display: flex; align-items: center; justify-content: center; min-width: 44px; min-height: 44px; border-radius: 50%;"
              tabindex="-1"
              type="button"
            >
              <div
                aria-hidden="true"
                class="c15"
                style="border: 2px solid #b30000; box-sizing: border-box; flex-shrink: 0;"
              >
                <svg
                  aria-label="Status is warning"
                  class="c12"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m12 3 10 18H2L12 3zm0 6v6m0 1v2"
                    fill="none"
                    stroke="#000"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
            <div
              aria-hidden="true"
              class="c16"
            />
          </div>
          <div
            class="c9"
          >
            <span
              class="c17"
            >
              Error
            </span>
            <span
              class="c18"
              id="stepper-error-s3"
            >
              Fix this.
            </span>
          </div>
        </div>
      </li>
      <li
        class="c2"
        style="list-style: none;"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              aria-hidden="true"
              class="c16"
            />
            <button
              aria-describedby="stepper-reason-s4"
              aria-disabled="true"
              aria-label="Step 4 of 4: Disabled"
              style="background: none; padding: 0px; margin: 0px; cursor: default; display: flex; align-items: center; justify-content: center; min-width: 44px; min-height: 44px; border-radius: 50%;"
              tabindex="-1"
              type="button"
            >
              <div
                aria-hidden="true"
                class="c19"
                style="border: 2px solid rgba(0, 0, 0, 0.33); box-sizing: border-box; flex-shrink: 0;"
              >
                <span
                  class="c20"
                >
                  4
                </span>
              </div>
            </button>
            <div
              aria-hidden="true"
              class="c5"
            />
          </div>
          <div
            class="c9"
          >
            <span
              class="c14"
            >
              Disabled
            </span>
            <span
              class="c21"
              id="stepper-reason-s4"
              style="display: block; font-size: smaller; opacity: 0.6;"
            >
              Not yet.
            </span>
          </div>
        </div>
      </li>
    </ol>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders in vertical direction 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: transparent;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 2px;
  flex: 1 1;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 32px;
  width: 32px;
  justify-content: center;
  border-radius: 100%;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #009E67;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 2px;
  flex: 1 1;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #FFFFFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 32px;
  width: 32px;
  justify-content: center;
  border-radius: 100%;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(0, 0, 0, 0.33);
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 2px;
  flex: 1 1;
}

.c8 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 12px;
}

.c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 12px;
  height: 12px;
  fill: #FFFFFF;
  stroke: #FFFFFF;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c10 {
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  color: #7D4CDB;
  font-weight: bold;
}

.c12 {
  font-size: 14px;
  line-height: 20px;
  color: #444444;
  font-weight: bold;
}

.c14 {
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  color: #444444;
  font-weight: normal;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c9 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    width: 6px;
  }
}

<div
    class="c0"
  >
    <ol
      aria-label="Progress steps"
      class="c1"
      style="list-style: none; margin: 0px; padding: 0px;"
    >
      <li
        aria-current="step"
        class="c1"
        style="list-style: none;"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <div
              aria-hidden="true"
              class="c4"
              style="min-height: 0;"
            />
            <button
              aria-current="step"
              aria-label="Step 1 of 3: Account"
              style="background: none; padding: 0px; margin: 0px; cursor: pointer; display: flex; align-items: center; justify-content: center; min-width: 44px; min-height: 44px; border-radius: 50%;"
              tabindex="0"
              type="button"
            >
              <div
                aria-hidden="true"
                class="c5"
                style="border: 2px solid #7d4cdb; box-sizing: border-box; flex-shrink: 0;"
              >
                <svg
                  aria-label="Checkmark"
                  class="c6"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m2 14 7 6L22 4"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
            <div
              aria-hidden="true"
              class="c7"
              style="min-height: 16px;"
            />
          </div>
          <div
            class="c8"
          />
          <div
            class="c9"
          >
            <span
              class="c10"
            >
              Account
            </span>
          </div>
        </div>
      </li>
      <li
        class="c1"
        style="list-style: none;"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <div
              aria-hidden="true"
              class="c7"
              style="min-height: 16px;"
            />
            <button
              aria-label="Step 2 of 3: Profile"
              style="background: none; padding: 0px; margin: 0px; cursor: pointer; display: flex; align-items: center; justify-content: center; min-width: 44px; min-height: 44px; border-radius: 50%;"
              tabindex="-1"
              type="button"
            >
              <div
                aria-hidden="true"
                class="c11"
                style="border: 2px solid rgba(0, 0, 0, 0.33); box-sizing: border-box; flex-shrink: 0;"
              >
                <span
                  class="c12"
                >
                  2
                </span>
              </div>
            </button>
            <div
              aria-hidden="true"
              class="c13"
              style="min-height: 16px;"
            />
          </div>
          <div
            class="c8"
          />
          <div
            class="c9"
          >
            <span
              class="c14"
            >
              Profile
            </span>
          </div>
        </div>
      </li>
      <li
        class="c1"
        style="list-style: none;"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <div
              aria-hidden="true"
              class="c13"
              style="min-height: 16px;"
            />
            <button
              aria-label="Step 3 of 3: Review"
              style="background: none; padding: 0px; margin: 0px; cursor: pointer; display: flex; align-items: center; justify-content: center; min-width: 44px; min-height: 44px; border-radius: 50%;"
              tabindex="-1"
              type="button"
            >
              <div
                aria-hidden="true"
                class="c11"
                style="border: 2px solid rgba(0, 0, 0, 0.33); box-sizing: border-box; flex-shrink: 0;"
              >
                <span
                  class="c12"
                >
                  3
                </span>
              </div>
            </button>
            <div
              aria-hidden="true"
              class="c4"
              style="min-height: 0;"
            />
          </div>
          <div
            class="c8"
          />
          <div
            class="c9"
          >
            <span
              class="c14"
            >
              Review
            </span>
          </div>
        </div>
      </li>
    </ol>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders without Grommet wrapper 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: transparent;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 2px;
  flex: 1 1;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 32px;
  width: 32px;
  justify-content: center;
  border-radius: 100%;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #009E67;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 2px;
  flex: 1 1;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-top: 6px;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #FFFFFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 32px;
  width: 32px;
  justify-content: center;
  border-radius: 100%;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(0, 0, 0, 0.33);
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 2px;
  flex: 1 1;
}

.c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 12px;
  height: 12px;
  fill: #FFFFFF;
  stroke: #FFFFFF;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c9 {
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  color: #7D4CDB;
  font-weight: bold;
}

.c11 {
  font-size: 14px;
  line-height: 20px;
  color: #444444;
  font-weight: bold;
}

.c13 {
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #444444;
  font-weight: normal;
}

@media only screen and (max-width: 768px) {
  .c8 {
    padding-top: 3px;
  }
}

<ol
    aria-label="Progress steps"
    class="c0"
    style="list-style: none; margin: 0px; padding: 0px;"
  >
    <li
      aria-current="step"
      class="c1"
      style="list-style: none;"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            aria-hidden="true"
            class="c4"
          />
          <button
            aria-current="step"
            aria-label="Step 1 of 3: Account"
            style="background: none; padding: 0px; margin: 0px; cursor: pointer; display: flex; align-items: center; justify-content: center; min-width: 44px; min-height: 44px; border-radius: 50%;"
            tabindex="0"
            type="button"
          >
            <div
              aria-hidden="true"
              class="c5"
              style="border: 2px solid #7d4cdb; box-sizing: border-box; flex-shrink: 0;"
            >
              <svg
                aria-label="Checkmark"
                class="c6"
                viewBox="0 0 24 24"
              >
                <path
                  d="m2 14 7 6L22 4"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
          <div
            aria-hidden="true"
            class="c7"
          />
        </div>
        <div
          class="c8"
        >
          <span
            class="c9"
          >
            Account
          </span>
        </div>
      </div>
    </li>
    <li
      class="c1"
      style="list-style: none;"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            aria-hidden="true"
            class="c7"
          />
          <button
            aria-label="Step 2 of 3: Profile"
            style="background: none; padding: 0px; margin: 0px; cursor: pointer; display: flex; align-items: center; justify-content: center; min-width: 44px; min-height: 44px; border-radius: 50%;"
            tabindex="-1"
            type="button"
          >
            <div
              aria-hidden="true"
              class="c10"
              style="border: 2px solid rgba(0, 0, 0, 0.33); box-sizing: border-box; flex-shrink: 0;"
            >
              <span
                class="c11"
              >
                2
              </span>
            </div>
          </button>
          <div
            aria-hidden="true"
            class="c12"
          />
        </div>
        <div
          class="c8"
        >
          <span
            class="c13"
          >
            Profile
          </span>
        </div>
      </div>
    </li>
    <li
      class="c1"
      style="list-style: none;"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            aria-hidden="true"
            class="c12"
          />
          <button
            aria-label="Step 3 of 3: Review"
            style="background: none; padding: 0px; margin: 0px; cursor: pointer; display: flex; align-items: center; justify-content: center; min-width: 44px; min-height: 44px; border-radius: 50%;"
            tabindex="-1"
            type="button"
          >
            <div
              aria-hidden="true"
              class="c10"
              style="border: 2px solid rgba(0, 0, 0, 0.33); box-sizing: border-box; flex-shrink: 0;"
            >
              <span
                class="c11"
              >
                3
              </span>
            </div>
          </button>
          <div
            aria-hidden="true"
            class="c4"
          />
        </div>
        <div
          class="c8"
        >
          <span
            class="c13"
          >
            Review
          </span>
        </div>
      </div>
    </li>
  </ol>
</DocumentFragment>
`;

exports[`Stepper should have no accessibility violations 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: transparent;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 2px;
  flex: 1 1;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #009E67;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 32px;
  width: 32px;
  justify-content: center;
  border-radius: 100%;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #009E67;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 2px;
  flex: 1 1;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-top: 6px;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 32px;
  width: 32px;
  justify-content: center;
  border-radius: 100%;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(0, 0, 0, 0.33);
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 2px;
  flex: 1 1;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #FFFFFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 32px;
  width: 32px;
  justify-content: center;
  border-radius: 100%;
}

.c7 {
  display: inline-block;
  flex: 0 0 auto;
  width: 12px;
  height: 12px;
  fill: #FFFFFF;
  stroke: #FFFFFF;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c7 *[stroke*='#'],
.c7 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*='#'],
.c7 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c10 {
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #555555;
  font-weight: normal;
}

.c12 {
  font-size: 14px;
  line-height: 20px;
  color: #FFFFFF;
  font-weight: bold;
}

.c14 {
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  color: #7D4CDB;
  font-weight: bold;
}

.c16 {
  font-size: 14px;
  line-height: 20px;
  color: #444444;
  font-weight: bold;
}

.c17 {
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #444444;
  font-weight: normal;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c9 {
    padding-top: 3px;
  }
}

<div
    class="c0"
  >
    <ol
      aria-label="Progress steps"
      class="c1"
      style="list-style: none; margin: 0px; padding: 0px;"
    >
      <li
        class="c2"
        style="list-style: none;"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              aria-hidden="true"
              class="c5"
            />
            <button
              aria-label="Step 1 of 3: Account"
              style="background: none; padding: 0px; margin: 0px; cursor: pointer; display: flex; align-items: center; justify-content: center; min-width: 44px; min-height: 44px; border-radius: 50%;"
              tabindex="-1"
              type="button"
            >
              <div
                aria-hidden="true"
                class="c6"
                style="border: 2px solid #009e67; box-sizing: border-box; flex-shrink: 0;"
              >
                <svg
                  aria-label="Checkmark"
                  class="c7"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m2 14 7 6L22 4"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
            <div
              aria-hidden="true"
              class="c8"
            />
          </div>
          <div
            class="c9"
          >
            <span
              class="c10"
            >
              Account
            </span>
          </div>
        </div>
      </li>
      <li
        aria-current="step"
        class="c2"
        style="list-style: none;"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              aria-hidden="true"
              class="c8"
            />
            <button
              aria-current="step"
              aria-label="Step 2 of 3: Profile"
              style="background: none; padding: 0px; margin: 0px; cursor: pointer; display: flex; align-items: center; justify-content: center; min-width: 44px; min-height: 44px; border-radius: 50%;"
              tabindex="0"
              type="button"
            >
              <div
                aria-hidden="true"
                class="c11"
                style="border: 2px solid #7d4cdb; box-sizing: border-box; flex-shrink: 0;"
              >
                <span
                  class="c12"
                >
                  2
                </span>
              </div>
            </button>
            <div
              aria-hidden="true"
              class="c13"
            />
          </div>
          <div
            class="c9"
          >
            <span
              class="c14"
            >
              Profile
            </span>
          </div>
        </div>
      </li>
      <li
        class="c2"
        style="list-style: none;"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              aria-hidden="true"
              class="c13"
            />
            <button
              aria-label="Step 3 of 3: Review"
              style="background: none; padding: 0px; margin: 0px; cursor: pointer; display: flex; align-items: center; justify-content: center; min-width: 44px; min-height: 44px; border-radius: 50%;"
              tabindex="-1"
              type="button"
            >
              <div
                aria-hidden="true"
                class="c15"
                style="border: 2px solid rgba(0, 0, 0, 0.33); box-sizing: border-box; flex-shrink: 0;"
              >
                <span
                  class="c16"
                >
                  3
                </span>
              </div>
            </button>
            <div
              aria-hidden="true"
              class="c5"
            />
          </div>
          <div
            class="c9"
          >
            <span
              class="c17"
            >
              Review
            </span>
          </div>
        </div>
      </li>
    </ol>
  </div>
</DocumentFragment>
`;
